@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9148 2005/02/15 16:48:44 rillig Exp $
+$NetBSD: CHANGES,v 1.9149 2005/02/15 20:46:21 rillig Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -884,3 +884,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated python23 to 2.3.5 [drochner 2005-02-15]
 	Updated fontforge to 20050209 [adam 2005-02-15]
 	Updated awstats to 6.3nb4 [minskim 2005-02-15]
+	Updated jabberd2 to 2.0s6nb1 [rillig 2005-02-15]
